<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="301dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/lk" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/id"
                    android:layout_width="133dp"
                    android:layout_height="133dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:src="@drawable/lah" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="85dp"
                    android:text="@string/Nama"
                    android:textColor="@android:color/black"
                    android:textSize="25sp"
                    android:gravity="center"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="123dp"
                    android:text="@string/Nim"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </FrameLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:weightSum="4"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/in" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="0dp"
                        android:padding="3dp"
                        android:text="@string/Simulasi"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/io" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="0dp"
                        android:padding="3dp"
                        android:text="@string/Cuaca"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/po" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="0dp"
                        android:padding="3dp"
                        android:text="@string/Nilai"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/lo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="0dp"
                        android:padding="3dp"
                        android:text="@string/Profil"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>




            <!--            baris 2-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="50dp"
                android:weightSum="4"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/za" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="0dp"
                        android:padding="3dp"
                        android:text="@string/Ikon1"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/zc" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="0dp"
                        android:padding="3dp"
                        android:text="@string/Ikon2"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/zv" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="0dp"
                        android:padding="3dp"
                        android:text="@string/Saran"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="101dp"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/zx" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="0dp"
                        android:padding="3dp"
                        android:text="@string/Tentang"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>